--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -36,8 +36,8 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to 'New Todo item', new_todo_list_todo_item_path(@todo_list.id) %>
+<p/>
+<%= link_to 'New Todo Item', new_todo_list_todo_item_path(@todo_list.id) %>
 <br>
 
 <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
