--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -18,11 +18,14 @@
         <td><%= todo_list.list_due_date %></td>
         <td><%= link_to 'Show', todo_list %></td>
         <td><%= link_to 'Edit', edit_todo_list_path(todo_list) %></td>
-        <td><%= link_to 'Destroy', todo_list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', todo_list, method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<p/>
+
+<%= will_paginate @todo_lists %>
 
 <br>
 
